added space for footer

--- a/index.html
+++ b/index.html
@@ -144,6 +144,8 @@
       .similar {
         padding-bottom: 30px;
       }
+
+      /* Footer */
     </style>
   </head>
   <body>
@@ -329,6 +331,7 @@ https://s3.amazonaws.com/shecodesio-production/uploads/files/000/111/468/origina
           </div>
         </section>
       </main>
+      <footer></footer>
     </div>
   </body>
 </html>
