added links to recommendation cards

--- a/index.html
+++ b/index.html
@@ -324,56 +324,76 @@
           <h3>On Netflix now</h3>
           <div class="grid grid-5">
             <div class="card">
-              <img
-                src="
+              <a
+                href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwjarMCJtoiEAxVRE1kFHcNODZUQFnoECDsQAQ&url=https%3A%2F%2Fwww.netflix.com%2Ftitle%2F81569769&usg=AOvVaw10fZNwNOlVgFZqYMEf2dYv&opi=89978449"
+                target="_blank"
+              >
+                <img
+                  src="
 https://s3.amazonaws.com/shecodesio-production/uploads/files/000/111/464/original/ENUS_ATimeCalledyou_Teaser_Vertical_27x40_RGB_PRE.jpg?1705801039"
-                alt="Avatar"
-                style="width: 100%"
-              />
+                  alt="Avatar"
+                  style="width: 100%"
+              /></a>
               <div class="contain">
                 <h4><b>A Time Called You</b></h4>
               </div>
             </div>
             <div class="card">
-              <img
-                src="
+              <a
+                href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwj8vJbNtoiEAxW_MVkFHepaCJsQFnoECDsQAQ&url=https%3A%2F%2Fwww.netflix.com%2Ftitle%2F80128686&usg=AOvVaw0jfV79s9_xxKuzbifm6Eow&opi=89978449"
+                target="_blank"
+              >
+                <img
+                  src="
 https://s3.amazonaws.com/shecodesio-production/uploads/files/000/111/465/original/Age_of_Youth001.jpg?1705801098"
-                alt="Avatar"
-                style="width: 100%"
-              />
+                  alt="Avatar"
+                  style="width: 100%"
+              /></a>
               <div class="contain">
                 <h4><b>Hello My Twenties</b></h4>
               </div>
             </div>
             <div class="card">
-              <img
-                src="
+              <a
+                href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwix6a_ptoiEAxXVGFkFHXsDBFcQFnoECGEQAQ&url=https%3A%2F%2Fwww.netflix.com%2Ftitle%2F81518991&usg=AOvVaw2zYOR9t3TGC8X7t3vZjPBQ&opi=89978449"
+                target="_blank"
+              >
+                <img
+                  src="
 https://s3.amazonaws.com/shecodesio-production/uploads/files/000/111/466/original/MV5BYjYxYzQxMzctYjdlZi00OWZlLWIwOTUtNWYzZWQ5MGQ0ZDBmXkEyXkFqcGdeQXVyMTMzODk3NDU0._V1_.jpg?1705801151"
-                alt="Avatar"
-                style="width: 100%"
-              />
+                  alt="Avatar"
+                  style="width: 100%"
+              /></a>
               <div class="contain">
                 <h4><b>Extraordinary Attorney Woo</b></h4>
               </div>
             </div>
             <div class="card">
-              <img
-                src="
+              <a
+                href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwj0luuFt4iEAxXxMlkFHY70Bj0QFnoECFwQAQ&url=https%3A%2F%2Fwww.netflix.com%2Ftitle%2F81159258&usg=AOvVaw3BbyxTt7et_9GLhlfgBycY&opi=89978449"
+                target="_blank"
+              >
+                <img
+                  src="
 https://s3.amazonaws.com/shecodesio-production/uploads/files/000/111/467/original/MV5BMzRiZWUyN2YtNDI4YS00NTg2LTg0OTgtMGI2ZjU4ODQ4Yjk3XkEyXkFqcGdeQXVyNTI5NjIyMw__._V1_.jpg?1705801210"
-                alt="Avatar"
-                style="width: 100%"
-              />
+                  alt="Avatar"
+                  style="width: 100%"
+              /></a>
               <div class="contain">
                 <h4><b>Crash Landing on You</b></h4>
               </div>
             </div>
             <div class="card">
-              <img
-                src="
+              <a
+                href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwigwaadt4iEAxUsEFkFHeYkDo8QFnoECGQQAQ&url=https%3A%2F%2Fwww.netflix.com%2Ftitle%2F81572781&usg=AOvVaw3hMzE1_58IvhEcXcjmLXnc&opi=89978449"
+                target="_blank"
+              >
+                <img
+                  src="
 https://s3.amazonaws.com/shecodesio-production/uploads/files/000/111/468/original/Forecasting_Love_and_Weather_%282022_television_series%29_poster.jpg?1705801626"
-                alt="Avatar"
-                style="width: 100%"
-              />
+                  alt="Avatar"
+                  style="width: 100%"
+              /></a>
               <div class="contain">
                 <h4><b>Forecasting Love and Weather</b></h4>
               </div>
@@ -423,11 +443,20 @@ https://s3.amazonaws.com/shecodesio-production/uploads/files/000/111/468/origina
             <h5>About this website</h5>
             <p class="foot">
               This project was coded by
-              <a href="" target="_blank" class="foot-link"
+              <a
+                href="https://www.linkedin.com/in/brooklyn-van-bebber-6bb8a9242/"
+                target="_blank"
+                class="foot-link"
                 >Brooklyn Van Bebber</a
               >
               and is
-              <a href="" target="_blank" class="foot-link">open source</a> .
+              <a
+                href="https://github.com/ANurfHerder"
+                target="_blank"
+                class="foot-link"
+                >open source</a
+              >
+              .
             </p>
           </div>
         </div>
