added new section with grids

--- a/index.html
+++ b/index.html
@@ -157,7 +157,16 @@
       .similar {
         padding-bottom: 30px;
       }
-
+      /* Characters */
+      .character-card {
+        max-width: 150px;
+        border-radius: 100px;
+      }
+      .pill {
+        background-color: #ffe5e356;
+        border-radius: 100px;
+        padding: 8px;
+      }
       /* Footer */
       footer {
         background-color: #f5606c4f;
@@ -278,6 +287,70 @@
                 16. As if I had met you in a book and received warm comfort...
               </li>
             </ul>
+          </div>
+        </section>
+        <section>
+          <h1>Actors</h1>
+          <h3>As of Feb</h3>
+          <div class="grid grid-3">
+            <div class="grid grid-2 pill">
+              <div>
+                <img
+                  src="
+https://s3.amazonaws.com/shecodesio-production/uploads/files/000/113/284/original/kEpVdc.jpg?1706813738"
+                  class="character-card"
+                />
+              </div>
+              <div>Lee Na-young</div>
+            </div>
+            <div class="grid grid-2 pill">
+              <div>
+                <img
+                  src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/113/283/original/eW73DbmKQrqb6xDC52oMbVehw6G.jpg?1706813714"
+                  class="character-card"
+                />
+              </div>
+              <div>Lee Na-young</div>
+            </div>
+            <div class="grid grid-2 pill">
+              <div>
+                <img
+                  src="
+https://s3.amazonaws.com/shecodesio-production/uploads/files/000/113/285/original/xzdP0_5f.jpg?1706813756"
+                  class="character-card"
+                />
+              </div>
+              <div>Lee Na-young</div>
+            </div>
+            <div class="grid grid-2 pill">
+              <div>
+                <img
+                  src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/113/286/original/MV5BOGM1YzEyZDYtMGVjYi00MTEyLTg0ZDMtNjZlY2M3ODFmZDVkXkEyXkFqcGdeQXVyNTI5NjIyMw__._V1_FMjpg_UX1000_.jpg?1706813770"
+                  class="character-card"
+                />
+              </div>
+              <div>Lee Na-young</div>
+            </div>
+            <div class="grid grid-2 pill">
+              <div>
+                <img
+                  src="
+
+https://s3.amazonaws.com/shecodesio-production/uploads/files/000/113/287/original/qL0l5_5f.jpg?1706813787"
+                  class="character-card"
+                />
+              </div>
+              <div>Kim Sun-young</div>
+            </div>
+            <div class="grid grid-2 pill">
+              <div>
+                <img
+                  src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/113/288/original/0ad13e12-89b5-4e81-9efa-601cad0a947d.jpg?1706813793"
+                  class="character-card"
+                />
+              </div>
+              <div>Jo Han-chul</div>
+            </div>
           </div>
         </section>
         <section>
