--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
       p {
         line-height: 1.5;
         font-family: "Roboto", sans-serif;
+        margin-bottom: 1px;
       }
       ul {
         list-style-type: none;
@@ -162,11 +163,16 @@
         max-width: 150px;
         border-radius: 100px;
       }
-      .pill {
-        background-color: #ffe5e356;
-        border-radius: 100px;
-        padding: 8px;
+      .bio-card {
+        grid-template-columns: 1fr 1fr;
+        gap: 10px;
       }
+      .pill {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+
       /* Footer */
       footer {
         background-color: #f5606c4f;
@@ -291,9 +297,9 @@
         </section>
         <section>
           <h1>Actors</h1>
-          <h3>As of Feb</h3>
+          <h3>As of February 2024</h3>
           <div class="grid grid-3">
-            <div class="grid grid-2 pill">
+            <div class="grid bio-card pill">
               <div>
                 <img
                   src="
@@ -301,18 +307,26 @@ https://s3.amazonaws.com/shecodesio-production/uploads/files/000/113/284/origina
                   class="character-card"
                 />
               </div>
-              <div>Lee Na-young</div>
+              <div>
+                <p>Lee Na-young</p>
+                <small class="wiki">이나영</small>
+                <p>44 years</p>
+              </div>
             </div>
-            <div class="grid grid-2 pill">
+            <div class="grid bio-card pill">
               <div>
                 <img
                   src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/113/283/original/eW73DbmKQrqb6xDC52oMbVehw6G.jpg?1706813714"
                   class="character-card"
                 />
               </div>
-              <div>Lee Na-young</div>
+              <div>
+                <p>Lee Jong Suk</p>
+                <small class="wiki">이종석</small>
+                <p>34 years</p>
+              </div>
             </div>
-            <div class="grid grid-2 pill">
+            <div class="grid bio-card pill">
               <div>
                 <img
                   src="
@@ -320,18 +334,26 @@ https://s3.amazonaws.com/shecodesio-production/uploads/files/000/113/285/origina
                   class="character-card"
                 />
               </div>
-              <div>Lee Na-young</div>
+              <div>
+                <p>Wi Ha-joon</p>
+                <small class="wiki">위하준</small>
+                <p>32 years</p>
+              </div>
             </div>
-            <div class="grid grid-2 pill">
+            <div class="grid bio-card pill">
               <div>
                 <img
                   src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/113/286/original/MV5BOGM1YzEyZDYtMGVjYi00MTEyLTg0ZDMtNjZlY2M3ODFmZDVkXkEyXkFqcGdeQXVyNTI5NjIyMw__._V1_FMjpg_UX1000_.jpg?1706813770"
                   class="character-card"
                 />
               </div>
-              <div>Lee Na-young</div>
+              <div>
+                <p>Jeong Eu-gene</p>
+                <small class="wiki">정유진</small>
+                <p>34 years</p>
+              </div>
             </div>
-            <div class="grid grid-2 pill">
+            <div class="grid bio-card pill">
               <div>
                 <img
                   src="
@@ -340,16 +362,24 @@ https://s3.amazonaws.com/shecodesio-production/uploads/files/000/113/287/origina
                   class="character-card"
                 />
               </div>
-              <div>Kim Sun-young</div>
+              <div>
+                <p>Kim Sun-young</p>
+                <small class="wiki">김선영</small>
+                <p>47 years</p>
+              </div>
             </div>
-            <div class="grid grid-2 pill">
+            <div class="grid bio-card pill">
               <div>
                 <img
                   src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/113/288/original/0ad13e12-89b5-4e81-9efa-601cad0a947d.jpg?1706813793"
                   class="character-card"
                 />
               </div>
-              <div>Jo Han-chul</div>
+              <div>
+                <p>Jo Han-chul</p>
+                <small class="wiki">조한철</small>
+                <p>50 years</p>
+              </div>
             </div>
           </div>
         </section>
