--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Elsie:wght@400;900&display=swap"
+      rel="stylesheet"
+    />
     <script
       src="https://kit.fontawesome.com/e78298b102.js"
       crossorigin="anonymous"
@@ -26,10 +30,20 @@
         max-width: 1300px;
         margin: 0 auto;
       }
-      .banner {
-        display: inline-block;
-        width: 100%;
-        max-height: 700px;
+      .review {
+        text-align: left;
+      }
+
+      .sub-review {
+        margin: 0px;
+      }
+      .review-p {
+        max-width: 400px;
+      }
+      .youtube {
+        border-radius: 10px;
+        margin: 0px 20px;
+        background-color: white;
       }
       section {
         max-width: 100%;
@@ -41,7 +55,11 @@
       main {
         padding-top: 50px;
       }
-
+      .title {
+        font-family: "Elsie", serif;
+        font-size: 50px;
+        text-align: center;
+      }
       h1 {
         color: #f5606d;
         text-align: left;
@@ -52,6 +70,7 @@
         font-weight: 600;
         font-style: normal;
       }
+
       h2 {
         color: #f5606d;
         opacity: 0.5;
@@ -81,11 +100,14 @@
         grid-template-columns: 2fr 1fr;
       }
 
-      .right {
+      .episodes {
         background-color: #ffe5e356;
       }
       .left {
-        margin: 0px 80px 0px 0px;
+        margin: 50px 80px 0px 0px;
+      }
+      .right {
+        margin: 50px 0px 0px 0px;
       }
       p {
         line-height: 1.5;
@@ -227,25 +249,42 @@
   <body>
     <div class="container">
       <header>
-        <div class="grid">
-          <div></div>
-          <div>
+        <img src="" />
+        <h1 class="title">Romance is a Bonus Book</h1>
+      </header>
+      <main class="box review-section">
+        <section class="grid grid-2">
+          <div class="review left">
+            <h1>A Quiet Romance</h1>
+            <h3 class="sub-review">Rating</h3>
+            <p class="sub-review">⭐⭐⭐⭐</p>
+            <p class="review-p">
+              Reviews for this show are always positive with most mentioning
+              "the moon is beautiful". If you are a fan of books, romance, and
+              overcoming struggles this is a great fit for you!
+            </p>
+            <a
+              href="https://www.imdb.com/title/tt9130542/reviews"
+              target="_blank"
+              ><button>Review here</button></a
+            >
+          </div>
+          <div class="right">
             <iframe
+              class="youtube"
               width="560"
               height="315"
-              src="https://www.youtube.com/embed/zjeXZEtEI2A?si=-hybi_imiFKVIDEg"
+              src="https://www.youtube.com/embed/zjeXZEtEI2A?si=LJTrnS3lIHAlgyGo"
               title="YouTube video player"
               frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
               allowfullscreen
             ></iframe>
           </div>
-        </div>
-      </header>
-      <main class="box">
+        </section>
         <section class="grid grid-2">
           <div class="left">
-            <h1>Romance is a Bonus Book</h1>
+            <h1>Quick Overview</h1>
             <h3>
               Synopsis<small
                 ><a
@@ -293,7 +332,7 @@
               lives.
             </p>
           </div>
-          <div class="right">
+          <div class="right episodes">
             <h2>Episodes</h2>
             <ul>
               <li>1. A big sister I know, Kang Dan-i</li>
