re-added header img

--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
       .review {
         text-align: left;
       }
-
+      .review-section {
+        margin-top: -150px;
+      }
       .sub-review {
         margin: 0px;
       }
@@ -54,6 +56,11 @@
       }
       main {
         padding-top: 50px;
+      }
+      .main-pic {
+        width: 100%;
+        padding: 0px;
+        margin: 0px;
       }
       .title {
         font-family: "Elsie", serif;
@@ -249,39 +256,12 @@
   <body>
     <div class="container">
       <header>
-        <img src="" />
-        <h1 class="title">Romance is a Bonus Book</h1>
+        <img
+          class="main-pic"
+          src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/111/445/original/bb3ad71b-135f-4e04-867d-9fa3f8377765_rw_1920.jpg?1705791055"
+        />
       </header>
       <main class="box review-section">
-        <section class="grid grid-2">
-          <div class="review left">
-            <h1>A Quiet Romance</h1>
-            <h3 class="sub-review">Rating</h3>
-            <p class="sub-review">⭐⭐⭐⭐</p>
-            <p class="review-p">
-              Reviews for this show are always positive with most mentioning
-              "the moon is beautiful". If you are a fan of books, romance, and
-              overcoming struggles this is a great fit for you!
-            </p>
-            <a
-              href="https://www.imdb.com/title/tt9130542/reviews"
-              target="_blank"
-              ><button>Review here</button></a
-            >
-          </div>
-          <div class="right">
-            <iframe
-              class="youtube"
-              width="560"
-              height="315"
-              src="https://www.youtube.com/embed/zjeXZEtEI2A?si=LJTrnS3lIHAlgyGo"
-              title="YouTube video player"
-              frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-              allowfullscreen
-            ></iframe>
-          </div>
-        </section>
         <section class="grid grid-2">
           <div class="left">
             <h1>Quick Overview</h1>
@@ -354,6 +334,35 @@
                 16. As if I had met you in a book and received warm comfort...
               </li>
             </ul>
+          </div>
+        </section>
+        <section class="grid grid-2">
+          <div class="review left">
+            <h1>A Quiet Romance</h1>
+            <h3 class="sub-review">Rating</h3>
+            <p class="sub-review">⭐⭐⭐⭐</p>
+            <p class="review-p">
+              Reviews for this show are always positive with most mentioning
+              "the moon is beautiful". If you are a fan of books, romance, and
+              overcoming struggles this is a great fit for you!
+            </p>
+            <a
+              href="https://www.imdb.com/title/tt9130542/reviews"
+              target="_blank"
+              ><button>Review here</button></a
+            >
+          </div>
+          <div class="right">
+            <iframe
+              class="youtube"
+              width="560"
+              height="315"
+              src="https://www.youtube.com/embed/zjeXZEtEI2A?si=LJTrnS3lIHAlgyGo"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              allowfullscreen
+            ></iframe>
           </div>
         </section>
         <section>
