--- a/index.html
+++ b/index.html
@@ -253,6 +253,14 @@
         -webkit-mask: var(--mask);
         mask: var(--mask);
       }
+      /* Animation */
+      .hidden {
+        opacity: 0;
+        transition: all 2s;
+      }
+      .show {
+        opacity: 1;
+      }
     </style>
   </head>
   <body>
@@ -265,7 +273,7 @@
       </header>
       <main class="box review-section">
         <section class="grid grid-2">
-          <div class="left">
+          <div class="left hidden">
             <h1>Quick Overview</h1>
             <h3>
               Synopsis<small
@@ -311,7 +319,7 @@
               ><button>Watch Trailer</button></a
             >
           </div>
-          <div class="right episodes">
+          <div class="hidden right episodes">
             <h2>Episodes</h2>
             <ul>
               <li>1. A big sister I know, Kang Dan-i</li>
@@ -337,95 +345,97 @@
         </section>
 
         <section>
-          <h1>Actors</h1>
-          <h3>As of February 2024</h3>
-          <div class="grid grid-3">
-            <div class="grid bio-card pill">
-              <div>
-                <img
-                  src="
+          <div class="hidden">
+            <h1>Actors</h1>
+            <h3>As of February 2024</h3>
+            <div class="grid grid-3">
+              <div class="grid bio-card pill">
+                <div>
+                  <img
+                    src="
 https://s3.amazonaws.com/shecodesio-production/uploads/files/000/113/284/original/kEpVdc.jpg?1706813738"
-                  class="character-card"
-                />
+                    class="character-card"
+                  />
+                </div>
+                <div>
+                  <p>Lee Na-young</p>
+                  <small class="wiki">이나영</small>
+                  <p>44 years</p>
+                </div>
               </div>
-              <div>
-                <p>Lee Na-young</p>
-                <small class="wiki">이나영</small>
-                <p>44 years</p>
+              <div class="grid bio-card pill">
+                <div>
+                  <img
+                    src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/113/283/original/eW73DbmKQrqb6xDC52oMbVehw6G.jpg?1706813714"
+                    class="character-card"
+                  />
+                </div>
+                <div>
+                  <p>Lee Jong Suk</p>
+                  <small class="wiki">이종석</small>
+                  <p>34 years</p>
+                </div>
               </div>
-            </div>
-            <div class="grid bio-card pill">
-              <div>
-                <img
-                  src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/113/283/original/eW73DbmKQrqb6xDC52oMbVehw6G.jpg?1706813714"
-                  class="character-card"
-                />
-              </div>
-              <div>
-                <p>Lee Jong Suk</p>
-                <small class="wiki">이종석</small>
-                <p>34 years</p>
-              </div>
-            </div>
-            <div class="grid bio-card pill">
-              <div>
-                <img
-                  src="
+              <div class="grid bio-card pill">
+                <div>
+                  <img
+                    src="
 https://s3.amazonaws.com/shecodesio-production/uploads/files/000/113/285/original/xzdP0_5f.jpg?1706813756"
-                  class="character-card"
-                />
+                    class="character-card"
+                  />
+                </div>
+                <div>
+                  <p>Wi Ha-joon</p>
+                  <small class="wiki">위하준</small>
+                  <p>32 years</p>
+                </div>
               </div>
-              <div>
-                <p>Wi Ha-joon</p>
-                <small class="wiki">위하준</small>
-                <p>32 years</p>
+              <div class="grid bio-card pill">
+                <div>
+                  <img
+                    src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/113/286/original/MV5BOGM1YzEyZDYtMGVjYi00MTEyLTg0ZDMtNjZlY2M3ODFmZDVkXkEyXkFqcGdeQXVyNTI5NjIyMw__._V1_FMjpg_UX1000_.jpg?1706813770"
+                    class="character-card"
+                  />
+                </div>
+                <div>
+                  <p>Jeong Eu-gene</p>
+                  <small class="wiki">정유진</small>
+                  <p>34 years</p>
+                </div>
               </div>
-            </div>
-            <div class="grid bio-card pill">
-              <div>
-                <img
-                  src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/113/286/original/MV5BOGM1YzEyZDYtMGVjYi00MTEyLTg0ZDMtNjZlY2M3ODFmZDVkXkEyXkFqcGdeQXVyNTI5NjIyMw__._V1_FMjpg_UX1000_.jpg?1706813770"
-                  class="character-card"
-                />
-              </div>
-              <div>
-                <p>Jeong Eu-gene</p>
-                <small class="wiki">정유진</small>
-                <p>34 years</p>
-              </div>
-            </div>
-            <div class="grid bio-card pill">
-              <div>
-                <img
-                  src="
+              <div class="grid bio-card pill">
+                <div>
+                  <img
+                    src="
 
 https://s3.amazonaws.com/shecodesio-production/uploads/files/000/113/287/original/qL0l5_5f.jpg?1706813787"
-                  class="character-card"
-                />
+                    class="character-card"
+                  />
+                </div>
+                <div>
+                  <p>Kim Sun-young</p>
+                  <small class="wiki">김선영</small>
+                  <p>47 years</p>
+                </div>
               </div>
-              <div>
-                <p>Kim Sun-young</p>
-                <small class="wiki">김선영</small>
-                <p>47 years</p>
-              </div>
-            </div>
-            <div class="grid bio-card pill">
-              <div>
-                <img
-                  src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/113/288/original/0ad13e12-89b5-4e81-9efa-601cad0a947d.jpg?1706813793"
-                  class="character-card"
-                />
-              </div>
-              <div>
-                <p>Jo Han-chul</p>
-                <small class="wiki">조한철</small>
-                <p>50 years</p>
+              <div class="grid bio-card pill">
+                <div>
+                  <img
+                    src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/113/288/original/0ad13e12-89b5-4e81-9efa-601cad0a947d.jpg?1706813793"
+                    class="character-card"
+                  />
+                </div>
+                <div>
+                  <p>Jo Han-chul</p>
+                  <small class="wiki">조한철</small>
+                  <p>50 years</p>
+                </div>
               </div>
             </div>
           </div>
         </section>
         <section>
-          <div class="grid grid-2">
+          <div class="grid grid-2 hidden">
             <div class="left">
               <h1>Emerse in the show</h1>
               <h3>Filming Locations</h3>
@@ -464,82 +474,84 @@ https://s3.amazonaws.com/shecodesio-production/uploads/files/000/113/287/origina
           </div>
         </section>
         <section class="similar">
-          <h1>Similar Watches</h1>
-          <h3>On Netflix now</h3>
-          <div class="grid grid-5">
-            <div class="card">
-              <a
-                href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwjarMCJtoiEAxVRE1kFHcNODZUQFnoECDsQAQ&url=https%3A%2F%2Fwww.netflix.com%2Ftitle%2F81569769&usg=AOvVaw10fZNwNOlVgFZqYMEf2dYv&opi=89978449"
-                target="_blank"
-              >
-                <img
-                  src="
+          <div class="hidden">
+            <h1>Similar Watches</h1>
+            <h3>On Netflix now</h3>
+            <div class="grid grid-5">
+              <div class="card">
+                <a
+                  href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwjarMCJtoiEAxVRE1kFHcNODZUQFnoECDsQAQ&url=https%3A%2F%2Fwww.netflix.com%2Ftitle%2F81569769&usg=AOvVaw10fZNwNOlVgFZqYMEf2dYv&opi=89978449"
+                  target="_blank"
+                >
+                  <img
+                    src="
 https://s3.amazonaws.com/shecodesio-production/uploads/files/000/111/464/original/ENUS_ATimeCalledyou_Teaser_Vertical_27x40_RGB_PRE.jpg?1705801039"
-                  alt="Avatar"
-                  style="width: 100%"
-              /></a>
-              <div class="contain">
-                <h4><b>A Time Called You</b></h4>
+                    alt="Avatar"
+                    style="width: 100%"
+                /></a>
+                <div class="contain">
+                  <h4><b>A Time Called You</b></h4>
+                </div>
               </div>
-            </div>
-            <div class="card">
-              <a
-                href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwj8vJbNtoiEAxW_MVkFHepaCJsQFnoECDsQAQ&url=https%3A%2F%2Fwww.netflix.com%2Ftitle%2F80128686&usg=AOvVaw0jfV79s9_xxKuzbifm6Eow&opi=89978449"
-                target="_blank"
-              >
-                <img
-                  src="
+              <div class="card">
+                <a
+                  href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwj8vJbNtoiEAxW_MVkFHepaCJsQFnoECDsQAQ&url=https%3A%2F%2Fwww.netflix.com%2Ftitle%2F80128686&usg=AOvVaw0jfV79s9_xxKuzbifm6Eow&opi=89978449"
+                  target="_blank"
+                >
+                  <img
+                    src="
 https://s3.amazonaws.com/shecodesio-production/uploads/files/000/111/465/original/Age_of_Youth001.jpg?1705801098"
-                  alt="Avatar"
-                  style="width: 100%"
-              /></a>
-              <div class="contain">
-                <h4><b>Hello My Twenties</b></h4>
+                    alt="Avatar"
+                    style="width: 100%"
+                /></a>
+                <div class="contain">
+                  <h4><b>Hello My Twenties</b></h4>
+                </div>
               </div>
-            </div>
-            <div class="card">
-              <a
-                href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwix6a_ptoiEAxXVGFkFHXsDBFcQFnoECGEQAQ&url=https%3A%2F%2Fwww.netflix.com%2Ftitle%2F81518991&usg=AOvVaw2zYOR9t3TGC8X7t3vZjPBQ&opi=89978449"
-                target="_blank"
-              >
-                <img
-                  src="
+              <div class="card">
+                <a
+                  href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwix6a_ptoiEAxXVGFkFHXsDBFcQFnoECGEQAQ&url=https%3A%2F%2Fwww.netflix.com%2Ftitle%2F81518991&usg=AOvVaw2zYOR9t3TGC8X7t3vZjPBQ&opi=89978449"
+                  target="_blank"
+                >
+                  <img
+                    src="
 https://s3.amazonaws.com/shecodesio-production/uploads/files/000/111/466/original/MV5BYjYxYzQxMzctYjdlZi00OWZlLWIwOTUtNWYzZWQ5MGQ0ZDBmXkEyXkFqcGdeQXVyMTMzODk3NDU0._V1_.jpg?1705801151"
-                  alt="Avatar"
-                  style="width: 100%"
-              /></a>
-              <div class="contain">
-                <h4><b>Extraordinary Attorney Woo</b></h4>
+                    alt="Avatar"
+                    style="width: 100%"
+                /></a>
+                <div class="contain">
+                  <h4><b>Extraordinary Attorney Woo</b></h4>
+                </div>
               </div>
-            </div>
-            <div class="card">
-              <a
-                href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwj0luuFt4iEAxXxMlkFHY70Bj0QFnoECFwQAQ&url=https%3A%2F%2Fwww.netflix.com%2Ftitle%2F81159258&usg=AOvVaw3BbyxTt7et_9GLhlfgBycY&opi=89978449"
-                target="_blank"
-              >
-                <img
-                  src="
+              <div class="card">
+                <a
+                  href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwj0luuFt4iEAxXxMlkFHY70Bj0QFnoECFwQAQ&url=https%3A%2F%2Fwww.netflix.com%2Ftitle%2F81159258&usg=AOvVaw3BbyxTt7et_9GLhlfgBycY&opi=89978449"
+                  target="_blank"
+                >
+                  <img
+                    src="
 https://s3.amazonaws.com/shecodesio-production/uploads/files/000/111/467/original/MV5BMzRiZWUyN2YtNDI4YS00NTg2LTg0OTgtMGI2ZjU4ODQ4Yjk3XkEyXkFqcGdeQXVyNTI5NjIyMw__._V1_.jpg?1705801210"
-                  alt="Avatar"
-                  style="width: 100%"
-              /></a>
-              <div class="contain">
-                <h4><b>Crash Landing on You</b></h4>
+                    alt="Avatar"
+                    style="width: 100%"
+                /></a>
+                <div class="contain">
+                  <h4><b>Crash Landing on You</b></h4>
+                </div>
               </div>
-            </div>
-            <div class="card">
-              <a
-                href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwigwaadt4iEAxUsEFkFHeYkDo8QFnoECGQQAQ&url=https%3A%2F%2Fwww.netflix.com%2Ftitle%2F81572781&usg=AOvVaw3hMzE1_58IvhEcXcjmLXnc&opi=89978449"
-                target="_blank"
-              >
-                <img
-                  src="
+              <div class="card">
+                <a
+                  href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwigwaadt4iEAxUsEFkFHeYkDo8QFnoECGQQAQ&url=https%3A%2F%2Fwww.netflix.com%2Ftitle%2F81572781&usg=AOvVaw3hMzE1_58IvhEcXcjmLXnc&opi=89978449"
+                  target="_blank"
+                >
+                  <img
+                    src="
 https://s3.amazonaws.com/shecodesio-production/uploads/files/000/111/468/original/Forecasting_Love_and_Weather_%282022_television_series%29_poster.jpg?1705801626"
-                  alt="Avatar"
-                  style="width: 100%"
-              /></a>
-              <div class="contain">
-                <h4><b>Forecasting Love and Weather</b></h4>
+                    alt="Avatar"
+                    style="width: 100%"
+                /></a>
+                <div class="contain">
+                  <h4><b>Forecasting Love and Weather</b></h4>
+                </div>
               </div>
             </div>
           </div>
@@ -626,5 +638,20 @@ https://s3.amazonaws.com/shecodesio-production/uploads/files/000/111/468/origina
         </div>
       </footer>
     </div>
+    <script>
+      let observer = new IntersectionObserver((entries) => {
+        entries.forEach((entry) => {
+          console.log(entry);
+          if (entry.isIntersecting) {
+            entry.target.classList.add("show");
+          } else {
+            entry.target.calssList.remove("show");
+          }
+        });
+      });
+
+      let hiddenElements = document.querySelectorAll(".hidden");
+      hiddenElements.forEach((el) => observer.observe(el));
+    </script>
   </body>
 </html>
