--- a/index.html
+++ b/index.html
@@ -371,6 +371,9 @@
         .foot-grid {
           grid-template-columns: 1fr;
         }
+        .similar {
+          display: none;
+        }
       }
     </style>
   </head>
