--- a/index.html
+++ b/index.html
@@ -375,6 +375,18 @@
           display: none;
         }
       }
+      @media (max-width: 300px) {
+        section {
+          padding: 15px;
+        }
+        button {
+          padding: 5px 7px;
+          font-size: 10px;
+        }
+        .character-card {
+          max-width: 80px;
+        }
+      }
     </style>
   </head>
   <body>
