fixing section visibility
On the inspect phone version in browser the <p> is formatted to fit well and similar section is not displayed, however when pulled up on phone these responsive attributes are not present. This hopefully will fix that.

--- a/index.html
+++ b/index.html
@@ -386,6 +386,12 @@
         .character-card {
           max-width: 80px;
         }
+        .similar {
+          display: none;
+        }
+        p {
+          padding: 0px;
+        }
       }
     </style>
   </head>
