--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>💗Romance is a Bonus Book💗</title>
+    <meta
+      name="description"
+      content="Romance is a Bonus Book is a well known netflix orginal K-drama. With serious and realistic tones, it tells the story of two long term friends that find love."
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
