updated github link

--- a/index.html
+++ b/index.html
@@ -737,7 +737,7 @@ https://s3.amazonaws.com/shecodesio-production/uploads/files/000/111/468/origina
                   style="color: #79c2d0"
                 ></i>
               </a>
-              <a href="https://github.com/ANurfHerder" target="_blank">
+              <a href="https://github.com/brooklynvb" target="_blank">
                 <i class="fa-brands fa-github fa-xl" style="color: black"></i>
               </a>
               <a href="https://www.instagram.com/anurfherder/" target="_blank">
@@ -760,7 +760,7 @@ https://s3.amazonaws.com/shecodesio-production/uploads/files/000/111/468/origina
               >
               and is
               <a
-                href="https://github.com/ANurfHerder"
+                href="https://github.com/brooklynvb"
                 target="_blank"
                 class="foot-link"
                 >open source</a
